--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["robots.txt", "parser"],
     "homepage": "https://github.com/webignition/robots-txt-parser",
     "type": "library",
-    "license": "WTFPL",
+    "license": "MIT",
     "authors": [
         {
             "name": "Jon Cram",
@@ -14,15 +14,5 @@
     "require": {
         "php": ">=5.3.0",
         "webignition/robots-txt-file": "*"           
-    },
-    "repositories": [
-        {
-            "type":"vcs",
-            "url": "https://github.com/webignition/disallowed-character-terminated-string"
-        },       
-        {
-            "type":"vcs",
-            "url": "https://github.com/webignition/robots-txt-file"
-        }        
-    ]    
+    }    
 }
