--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,12 @@
             "email": "jon@webignition.net"
         }
     ],
+    "autoload": {
+        "psr-0": { "": "src/" }
+    },
     "require": {
         "php": ">=5.3.0",
-        "webignition/robots-txt-file": "*"           
-    }    
+        "webignition/robots-txt-file": "dev-master",
+        "webignition/disallowed-character-terminated-string": "1.0"  
+    }  
 }
