--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ language: php
 php:
   - 5.3
   - 5.4
+  - 5.5
+  - 5.6
+  - hhvm
   
-before_script:
-  - wget http://getcomposer.org/composer.phar
-  - php composer.phar install
+before_install:
+  - composer self-update
+  
+install: 
+  - composer install
