--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
+sudo: false
 language: php
 php:
-  - 5.3
-  - 5.4
   - 5.5
   - 5.6
-  - hhvm
-  
-before_install:
-  - composer self-update
-  
-install: 
+  - 7
+
+install:
   - composer install
+
+script:
+  - composer cs
+  - composer test
