--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,25 @@
         }
     ],
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-4": {
+            "webignition\\RobotsTxt\\": "src/"
+        }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit --colors=always",
+        "cs": "./vendor/bin/phpcs src tests --colors --standard=PSR2",
+        "ci": [
+            "@composer cs",
+            "@composer test"
+        ]
     },
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.5.0",
         "webignition/robots-txt-file": ">=0.1,<1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "minimum-stability":"stable",
     "prefer-stable":true
