--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "webignition/robots-txt-parser",
     "description": "Parser for robots.txt files",
+    "abandoned" : "This package has been abandoned. Please use webignition/robots-txt-file instead.",
     "keywords": ["robots.txt", "parser"],
     "homepage": "https://github.com/webignition/robots-txt-parser",
     "type": "library",
@@ -11,27 +12,6 @@
             "email": "jon@webignition.net"
         }
     ],
-    "autoload": {
-        "psr-4": {
-            "webignition\\RobotsTxt\\": "src/"
-        }
-    },
-    "scripts": {
-        "test": "./vendor/bin/phpunit --colors=always",
-        "cs": "./vendor/bin/phpcs src tests --colors --standard=PSR2",
-        "ci": [
-            "@composer cs",
-            "@composer test"
-        ]
-    },
-    "require": {
-        "php": ">=5.5.0",
-        "webignition/robots-txt-file": ">=0.1,<1.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "squizlabs/php_codesniffer": "3.*"
-    },
     "minimum-stability":"stable",
     "prefer-stable":true
 }
